# quant

./: .gitignore  BreakupVolumeFilter.py  CMakeLists.txt  MomentumStrategy.py  README.md  Untitled.ipynb  backtrade.py  cache_line_test.cpp  cron.py  find_stocks.py  getstockdata.py  requirements.txt  run_batch.py  select_stock.py  symbols.csv  testakshare.py  多因子.ipynb
AlphaProject/: main.py
AlphaProject/data/: stocks.parquet
AlphaProject/src/: __init__.py  backtest.py  data_fetch.py  factors.py
backtest/: __init__.py  batch.py  engine.py
demo/: test_polars.py
include/: ringbuffer.hpp  shared_ptr.hpp
mongo_py/: marketdata_db.py  stock_data.py  test.py
src/: ringbuffer.rs  test_ringbuffer.cpp  test_shared_ptr.cpp
strategies/: __init__.py  dual_ma.py
test/: README_parse_trade_log.md  parse_trade_log.py  server_wechat_test.py
